--- a/InfinityStore/Infinity.Store/wwwroot/content/css/style.css
+++ b/InfinityStore/Infinity.Store/wwwroot/content/css/style.css
@@ -376,16 +376,17 @@ ol {
 	float: right;
 }
 
-.header-top .ht-right .login-panel {
-	float: right;
-	font-size: 14px;
-	color: #252525;
-	display: inline-block;
-	padding-left: 20px;
-	border-left: 1px solid #e5e5e5;
-	padding-top: 18px;
-	padding-bottom: 15px;
-}
+	.header-top .ht-right .login-panel {
+		float: right;
+		font-size: 14px;
+		color: #252525;
+		display: inline-block;
+		padding-left: 20px;
+		padding-right: 20px;
+		border-left: 1px solid #e5e5e5;
+		padding-top: 18px;
+		padding-bottom: 15px;
+	}
 
 .header-top .ht-right .login-panel i {
 	margin-right: 8px;
