--- a/InfinityStore/Infinity.Store/Areas/Identity/Pages/Account/Login.cshtml
+++ b/InfinityStore/Infinity.Store/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,51 +5,6 @@
     ViewData["Title"] = "Log in";
 }
 
-@*<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>*@
-
-
-
-
-
     <!-- Breadcrumb Section Begin -->
     <div class="breacrumb-section">
         <div class="container">
@@ -73,7 +28,7 @@
                         <h2>Login</h2>
                         <form id="account" method="post">
                             <div class="group-input">
-                                <label asp-for="Input.Email">Username or email address *</label>
+                                <label asp-for="Input.Email">Email address *</label>
                                 <input asp-for="Input.Email" type="text">
                                 <span asp-validation-for="Input.Email" class="text-danger"></span>
                             </div>
@@ -94,6 +49,35 @@
                             </div>
                             <button type="submit" class="site-btn login-btn">Sign In</button>
                         </form>
+                        <div style="margin-top: 5px" class="group-input">
+                            <section>
+                                <hr />
+                                @{
+                                    if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                                    {
+                                        <div>
+                                            <p>
+                                                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                                for details on setting up this ASP.NET application to support logging in via external services.
+                                            </p>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                            @foreach (var provider in Model.ExternalLogins)
+                                            {
+                                                <button class="btn btn-block btn-social btn-sm btn-@provider.Name.ToLower()" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                                                    <span class="fa fa-@provider.Name.ToLower()"></span> Sign in with @provider.Name
+                                                </button>
+                                            }
+                                        </form>
+                                    }
+                                }
+                                <hr />
+                            </section>
+                        </div>
+                   
                         <div class="switch-login">
                             <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="or-login">Or Create An Account</a>
                         </div>
@@ -103,38 +87,3 @@
         </div>
     </div>
     <!-- Register Form Section End -->
-
-
-
-
-
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
