--- a/InfinityStore/Infinity.Store/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/InfinityStore/Infinity.Store/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,57 +1,54 @@
 ﻿@page
 @model ExternalLoginModel
-@using Microsoft.AspNetCore.Identity
-@using Infinity.Data
-@inject SignInManager<ApplicationUser> SignInManager
 @{
-    //.First(c => c.Type == "urn:facebook:name")
     ViewData["Title"] = "Register";
-    var loginInfo = (await SignInManager.GetExternalLoginInfoAsync())?.Principal?.Claims;
-    var fullName = loginInfo?.FirstOrDefault(x => x.Type.EndsWith("/name"))?.Value;
-    var FName = loginInfo?.FirstOrDefault(x => x.Type.EndsWith("/surname"))?.Value;
-    var LName = loginInfo?.FirstOrDefault(x => x.Type.EndsWith("/givenname"))?.Value;
-    var MName = fullName.Replace(FName, "")
-                        .Replace(LName, "")
-                        .Trim();
-
-    var newFullName = $"{FName} {MName} {LName}";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4 id="external-login-title">Associate your @Model.ProviderDisplayName account.</h4>
-<hr />
-
-<p id="external-login-description" class="text-info">
-    You've successfully authenticated with <strong>@Model.ProviderDisplayName</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
-</p>
-
-<div class="row">
-    <div class="col-md-4">
-        <textarea>@newFullName</textarea>
-        <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<div class="register-login-section spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+                <div class="register-form">
+                    <h2>Associate your @Model.ProviderDisplayName account.</h2>
+                    <p id="external-login-description" class="text-info">
+                        You've successfully authenticated with <strong>@Model.ProviderDisplayName</strong>.
+                        Please enter an email address for this site below and click the Register button to finish
+                        logging in.
+                    </p>
+                    <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                        <img src="@Model.Input.AvatarUrl"/>
+                        <input hidden type="text" asp-for="Input.AvatarUrl">
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <div class="group-input">
+                            <label asp-for="Input.Email">Email address *</label>
+                            <input type="text" asp-for="Input.Email">
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        </div>
+                        <div class="group-input">
+                            <label asp-for="Input.FirstName">First Name *</label>
+                            <input type="text" asp-for="Input.FirstName">
+                            <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                        </div>
+                        <div class="group-input">
+                            <label asp-for="Input.MiddleName">Middle Name</label>
+                            <input type="text" asp-for="Input.MiddleName">
+                            <span asp-validation-for="Input.MiddleName" class="text-danger"></span>
+                        </div>
+                        <div class="group-input">
+                            <label asp-for="Input.LastName">Last Name *</label>
+                            <input type="text" asp-for="Input.LastName">
+                            <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="site-btn register-btn">REGISTER</button>
+                    </form>
+                    <div class="switch-login">
+                        <a asp-page="login" class="or-login">Other Login</a>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
+        </div>
     </div>
 </div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
