--- a/InfinityStore/Infinity.Store/Areas/Identity/Pages/Account/Login.cshtml
+++ b/InfinityStore/Infinity.Store/Areas/Identity/Pages/Account/Login.cshtml
@@ -27,6 +27,7 @@
                     <div class="login-form">
                         <h2>Login</h2>
                         <form id="account" method="post">
+                            <div asp-validation-summary="All" class="text-danger"></div>
                             <div class="group-input">
                                 <label asp-for="Input.Email">Email address *</label>
                                 <input asp-for="Input.Email" type="text">
@@ -50,20 +51,11 @@
                             <button type="submit" class="site-btn login-btn">Sign In</button>
                         </form>
                         <div style="margin-top: 5px" class="group-input">
-                            <section>
-                                <hr />
+                            <div>
                                 @{
-                                    if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                                    if ((Model.ExternalLogins?.Count ?? 0) > 0)
                                     {
-                                        <div>
-                                            <p>
-                                                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                                for details on setting up this ASP.NET application to support logging in via external services.
-                                            </p>
-                                        </div>
-                                    }
-                                    else
-                                    {
+                                        <hr />
                                         <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
                                             @foreach (var provider in Model.ExternalLogins)
                                             {
@@ -72,10 +64,10 @@
                                                 </button>
                                             }
                                         </form>
+                                        <hr />
                                     }
                                 }
-                                <hr />
-                            </section>
+                            </div>
                         </div>
                    
                         <div class="switch-login">
