--- a/InfinityStore/Infinity.Store/wwwroot/content/css/style.css
+++ b/InfinityStore/Infinity.Store/wwwroot/content/css/style.css
@@ -30,7 +30,13 @@
 /*----------------------------------------*/
 /* Template default CSS
 /*----------------------------------------*/
-
+.avatar {
+	vertical-align: middle;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	margin: 5px;
+}
 html,
 body {
 	height: 100%;
