--- a/InfinityStore/Infinity.Store/wwwroot/content/css/style.css
+++ b/InfinityStore/Infinity.Store/wwwroot/content/css/style.css
@@ -32,10 +32,10 @@
 /*----------------------------------------*/
 .avatar {
 	vertical-align: middle;
-	width: 25px;
-	height: 25px;
+	width: 22px;
+	height: 22px;
 	border-radius: 50%;
-	margin: 5px;
+	/*margin: 1px;*/
 }
 html,
 body {
