--- a/InfinityStore/Infinity.Store/Views/Shared/_LoginPartial.cshtml
+++ b/InfinityStore/Infinity.Store/Views/Shared/_LoginPartial.cshtml
@@ -21,7 +21,7 @@
     }
     else
     {
-        <a asp-area="Identity" asp-page="/Account/Register"> @Localizer["Register"]</a>
+        <a asp-area="Identity" asp-page="/Account/Register"><i class="fa fa-user-plus"></i> @Localizer["Register"]</a>
         <a asp-area="Identity" asp-page="/Account/Login"><i class="fa fa-user"></i> @Localizer["Login"]</a>
     }
 </div>
